// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generatePrismaSchema generates correct postgresql schema 1`] = `
"
generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model BillingInvoices {
  id         String   @id
  amount     Int
  status     String
  is_active  Boolean?
  metadata   Json?
  created_at DateTime
  email      String
  user_id    String
  user       User     @relation(fields: [user_id], references: [id], onDelete: Cascade)

  @@unique([email])
  @@map("billing_invoices")
}
"
`;

exports[`generatePrismaSchema generates correct mysql schema 1`] = `
"
generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

model BillingInvoices {
  id         String   @id
  amount     Int
  status     String   @db.Text
  is_active  Boolean?
  metadata   String?
  created_at DateTime
  email      String
  user_id    String
  user       User     @relation(fields: [user_id], references: [id], onDelete: Cascade)

  @@unique([email])
  @@map("billing_invoices")
}
"
`;

exports[`generatePrismaSchema generates correct sqlite schema 1`] = `
"
generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = "file:./dev.db"
}

model BillingInvoices {
  id         String   @id
  amount     Int
  status     String
  is_active  Boolean?
  metadata   String?
  created_at DateTime
  email      String
  user_id    String
  user       User     @relation(fields: [user_id], references: [id], onDelete: Cascade)

  @@unique([email])
  @@map("billing_invoices")
}
"
`;
